--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,21 @@
 <resources>
     <string name="app_name">ChinatownTour_v1.0</string>
+
+    <!-- Main Layout -->
     <string name="transport_button">Transport</string>
     <string name="food_button">Food</string>
     <string name="hotel_button">Hotel</string>
     <string name="poi_button">Points Of Interest</string>
     <string name="history_button">History</string>
     <string name="itinerary_button">Itinerary</string>
+
+    <!-- Settings Layout -->
+    <string name="allow_location_textview">Allow Location</string>
+    <string name="email_editText_hint">Email for Notifications</string>
+    <string name="language_change_textview">Change Language</string>
+    <string-array name="language">
+        <item>English</item>
+        <item>Spanish</item>
+        <item>Chinese(Simplified)</item>
+    </string-array>
 </resources>
