--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -140,6 +140,122 @@
      
      <!-- Activities -->
     
+        <string name="activity1_name">Museum of Chinese in America</string>
+    <string name="activity1_static">devoted to presenting and preserving
+        the history, heritage, and culture of Chinese immigrants in the US</string>
+    <string name="activity1_type">museum</string>
+    <string name="activity1_address">215 Centre Street</string>
+    <string name="activity1_website">mocanyc.org</string>
+    <string name="activity1_phonenumber">212-619-4785</string>
+
+    <string name="activity2_name">Mayahana Temple Buddhist Association</string>
+    <string name="activity2_static">NYC\'s largest Buddhist temple; provides services such as
+        formal ceremonies on weekends, fortune telling, weddings,
+        and areas for friends and families of the deceased to pay their respects</string>
+    <string name="activity2_type">religious institution</string>
+    <string name="activity2_address">133 Canal Street</string>
+    <string name="activity2_website">mahayana.us</string>
+    <string name="activity2_phonenumber">212-925-8787</string>
+
+    <string name="activity3_name">Aji Ichiban</string>
+    <string name="activity3_static">an Asian snack paradise for those wishing to satisfy their sweet
+        tooth; sells a variety of dried foods, exotic hard-to-find savory treats, and nostalgic Western treats</string>
+    <string name="activity3_type">confectionary shop</string>
+    <string name="activity3_address">37 Mott Street</string>
+    <string name="activity3_website">mocanyc.org</string>
+    <string name="activity3_phonenumber">212-233-7650</string>
+
+    <string name="activity4_name">Canal Street</string>
+    <string name="activity4_static">a shopping experience with an open-air bazaar feel,
+        complete with vendors willing to bargain </string>
+    <string name="activity4_type">shopping</string>
+
+    <string name="activity5_name">Apotheke</string>
+    <string name="activity5_static">a bar inspired by European apothecaries and resembles
+        a chemistry lab; offers over 250 cocktails, referred to as "prescriptions"</string>
+    <string name="activity5_type">bar</string>
+    <string name="activity5_address">9 Doyers Street</string>
+    <string name="activity5_website">apothekenyc.com</string>
+    <string name="activity5_phonenumber">212-406-0400</string>
+
+    <string name="activity6_name">Columbus Park</string>
+    <string name="activity6_static">at the heart of Chinatown; has a basketball court,
+        playground, Astroturf field; The north is an area for mah-jongg and card players</string>
+    <string name="activity6_type">park</string>
+    <string name="activity6_address">66 Mulberry Street</string>
+    <string name="activity6_website">nycgovparks.org/parks/columbus-park-m015/</string>
+    <string name="activity6_phonenumber">212-406-0400</string>
+
+    <string name="activity7_name">Chinese Consolidated Benevolent Association</string>
+    <string name="activity7_static">founded to serve and protect the interests of the Chinese people in
+        the New York metropolitan area; provides social services, language classes and cultural preservation activities</string>
+    <string name="activity7_type">community center</string>
+    <string name="activity7_address">62 Mott Street</string>
+    <string name="activity7_website">ccbanyc.org</string>
+    <string name="activity7_phonenumber">212-226-6280</string>
+
+    <string name="activity8_name">Magic Jewelry</string>
+    <string name="activity8_static">an occult shop which specializes in feng shui,
+        crystals, and horoscopes; the only place in the city that photographs and reads auras</string>
+    <string name="activity8_type">shopping</string>
+    <string name="activity8_address">238 Canal Street</string>
+    <string name="activity8_website">mocanyc.org</string>
+    <string name="activity8_phonenumber">212-343-0663</string>
+
+    <string name="activity9_name">Mmuseumm</string>
+    <string name="activity9_static">a modern natural history museum located in a
+        freight elevator; collection of unique artifacts</string>
+    <string name="activity9_address">4 Cortlandt Alley</string>
+    <string name="activity9_website">mmuseumm.com</string>
+    <string name="activity9_phonenumber">888-763-8839</string>
+
+    <string name="activity10_name">Up Stairs</string>
+    <string name="activity10_static">located on the second floor of an apartment building;
+        This small but lively bar enourages patrons to belt out to the classics while drinking brews on tap</string>
+    <string name="activity10_type">karaoke bar</string>
+    <string name="activity10_address">59 Canal Street</string>
+    <string name="activity10_website">mocanyc.org</string>
+    <string name="activity10_phonenumber">646-559-0098</string>
+
+    <string name="activity11_name">Zu Yuan</string>
+    <string name="activity11_static">spend a day of relaxation and unwinding; provides spa
+        and beauty services for face and body </string>
+    <string name="activity11_type">spa</string>
+    <string name="activity11_address">48 Mott Street</string>
+    <string name="activity11_website">mocanyc.org</string>
+    <string name="activity11_phonenumber">212-587-8881</string>
+
+    <string name="activity12_name">NYC Gangster Tours</string>
+    <string name="activity12_static">From the 1840’s through 1920’s, learn about the earlier era of
+        street gangs of NYC and about the evolution from small packs of immigrant thugs with tightly knit
+        loyalties to an evolved, corporate style American  syndicate. Mulberry Street, from Chinatown to Little
+        Italy, is where most of the notorious gangsters in New York rose up. From the former Five Points, New York’s
+        most notorious slum, to the narrow alleys Chinatown’s  “Bloody Angle.” In Little Italy’s Historic District
+        we learn the ruthless tactics of the first Mafia bosses of New York, the proud efforts of NYPD Liutenant
+        Joe Petrosino’s fight against these thugs. Organized Crime as we know it was born on these streets.</string>
+    <string name="activity12_type">walking tour</string>
+    <string name="activity12_address">meets at the corner of Mulberry &amp; Worth streets</string>
+    <string name="activity12_website">nycgangstertours.com/</string>
+    <string name="activity12_phonenumber">516-652-4527</string>
+
+    <string name="activity13_name">Church of the Transfiguration</string>
+    <string name="activity13_static">serves the Irish, German, Italian and, most recently, Chinese communities;
+        Sunday masses are held in English, Mandarin, and Cantonese; houses a chinese school</string>
+    <string name="activity13_address">29 Mott Street</string>
+    <string name="activity13_website">transfigurationnyc.org</string>
+    <string name="activity13_phonenumber">212-962-5157</string>
+
+    <string name="activity14_name">Lunar New Year Parade &amp; Festival</string>
+    <string name="activity14_static">an annual celebration of the beginning of the turn of the
+        Chinese lunisolar calendar; features all kinds of vendors, festivities, and food for all ages</string>
+    <string name="activity14_type">parade</string>
+    <string name="activity14_address">East Houston Street to Canal Street</string>
+    <string name="activity14_website">betterchinatown.com/</string>
+
+    <string name="activity15_name">Autumn Mood Parade &amp; Festival</string>
+    <string name="activity15_static">an annual celebration of the end of the autumn harvest; held on the
+        15th day of the 8th lunar month; features stage performances, cultural arts &amp; crafts, calligraphy, gift booths, moon cake tastings, etc.</string>
+    <string name="activity15_address">Mott Street; between Canal and Beyard Streets</string>
     
     <!-- Activities Sub-Section: Shopping -->
     
